--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidycheckUsage
 Title: Tidy Output of checkUsage from codetools Package
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: person("Jonathan", "Sidi", email = "yonicd@gmail.com", role = c("aut", "cre"))
 Description: Returns tidy data.frame of checkUsage and checkUsagePackage from the codetools pacakge.
 Depends: R (>= 3.3.3)
@@ -9,3 +9,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
+Suggests: testthat
