--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.1
 Authors@R: person("Jonathan", "Sidi", email = "yonicd@gmail.com", role = c("aut", "cre"))
 Description: Returns tidy data.frame of checkUsage and checkUsagePackage from the codetools pacakge.
 Depends: R (>= 3.3.3)
-Imports: codetools, utils
+Imports: shiny,DT,htmltools,utils,rstudioapi,codetools
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
