--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Version: 0.0.1
 Authors@R: person("Jonathan", "Sidi", email = "yonicd@gmail.com", role = c("aut", "cre"))
 Description: Returns tidy data.frame of checkUsage and checkUsagePackage from the codetools pacakge.
 Depends: R (>= 3.3.3)
-Imports: shiny,DT,htmltools,utils,rstudioapi,codetools
+Imports: shiny,DT,htmltools,utils,rstudioapi,codetools,devtools,callr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0
 Suggests: testthat
