--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,16 @@
 S3method(append_rlang,function_usage)
 S3method(append_rlang,package_usage)
 export(append_rlang)
+export(silent_check)
 export(tidycheckUsage)
 export(tidycheckUsagePackage)
 export(usage_report)
 import(shiny)
 importFrom(DT,datatable)
+importFrom(callr,r_bg)
 importFrom(codetools,checkUsage)
 importFrom(codetools,checkUsagePackage)
+importFrom(devtools,check)
 importFrom(htmltools,attachDependencies)
 importFrom(htmltools,htmlDependencies)
 importFrom(htmltools,htmlDependency)
