rewrite gsub into shift

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ importFrom(htmltools,attachDependencies)
 importFrom(htmltools,htmlDependencies)
 importFrom(htmltools,htmlDependency)
 importFrom(rstudioapi,getActiveProject)
+importFrom(stringi,stri_replace_all)
 importFrom(utils,capture.output)
 importFrom(utils,getParseData)
