--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,6 @@ importFrom(htmltools,attachDependencies)
 importFrom(htmltools,htmlDependencies)
 importFrom(htmltools,htmlDependency)
 importFrom(rstudioapi,getActiveProject)
-importFrom(stringi,stri_replace_all)
+importFrom(stringi,stri_sub_replace)
 importFrom(utils,capture.output)
 importFrom(utils,getParseData)
